@@ -10,6 +10,7 @@ Changelog
   image content always generated for Image content type. [simahawk]
 - Default autogenerated subjects (using loremipsum). [simahawk]
 - Add option to display type name in the generated title. [jcbrand]
+- Fixed to create all standard types from plone.app.contenttypes. [jcbrand]
 
 0.8 (2013-04-22)
 ----------------
